<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_materi"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_materi" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_quiz" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/mood_up"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/mood_bad"
        android:title="@string/title_info" />

</menu>