<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wicak.plito.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_materi"
        android:name="com.wicak.plito.ui.materi.MateriFragment"
        android:label="@string/title_materi"
        tools:layout="@layout/fragment_materi" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.wicak.plito.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.wicak.plito.ui.chat.RoomFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chatroom" />
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.wicak.plito.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>